ensure btn-bar can wrap

--- a/frontend/src/stylesheets/buttons.scss
+++ b/frontend/src/stylesheets/buttons.scss
@@ -12,6 +12,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  flex-wrap: wrap;
 
   &.center {
     justify-content: center;
